# libnrnpfp

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: config.h.in  configure.cmake
lib/: Makefile  configure.mk  libnrnpfp.h  linkme.mk  sendfile.c  sendfileportable.c  sendfileportable.h
test/: Makefile
test/client/: Makefile  client.c
test/server/: Makefile  server.c
